--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  grid-row: 2;
 }
 
 #orangeBar {
