--- a/src/pages/ServicesPage.css
+++ b/src/pages/ServicesPage.css
@@ -1,6 +1,7 @@
 @import "../variables.css";
 
 .servicesPage {
+  grid-area: main;
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
